feat: reimplement download command